final junit tested project